--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,9 @@
     <string name="title_SelectedLanguage">Selected Language</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+<!--    Popup for filtering-->
+    <string name="ascending" translatable="false">Ascending</string>
+    <string name="descending" translatable="false">Descending</string>
+    <string name="mostsold" translatable="false">Most Sold</string>
 </resources>
