sms send success

--- a/app/src/main/res/values-ne-rNP/strings.xml
+++ b/app/src/main/res/values-ne-rNP/strings.xml
@@ -41,7 +41,7 @@
     <string name="title_Remarks"> टिप्पणीहरू </string>
     <string name="title_Comments"> प्रतिक्रियाहरु…</string>
     <!--bill-->
-    <string name="title_Bhokraha2"> भोक्राहा – २ </string>
+    <string name="title_Bhokraha2AndPhno"> भोक्राहा – २, 9819300046 </string>
     <string name="title_Receipt"> रसिद </string>
     <string name="title_Prima"> प्रिमा </string>
     <string name="title_Kamakhya"> कामख्या </string>
