--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="title_Remarks">Remarks</string>
     <string name="title_Comments">Comments...</string>
     <!--bill-->
-    <string name="title_Bhokraha2">Bhokraha-2</string>
+    <string name="title_Bhokraha2AndPhno">Bhokraha-2, 9819300046</string>
     <string name="title_Receipt">Receipt</string>
     <string name="title_Prima">Prima</string>
     <string name="title_Kamakhya">Kamakhya</string>
